Bug 1213050 - Clean up TaskQueue before dropping references to it. r=cpearce, a=sledru

Also adds assertion TaskQueue isn't trying to kill itself

MozReview-Commit-ID: 1AVuYcfnBBA

--HG--
extra : source : 52abfa1b62290859f78670b3fa33eaadfbfdd694